# Cognify

./: Readme.md
backend/: .env.example  Dynamic Prompt.py  Multi-Shot Prompt.py  One-Shot Prompt.py  README.md  System and User Prompt.md  System and User Prompt.py  Zero-Shot Prompt.py  pyproject.toml
backend/app/: main.py
backend/app/routers/: prompt.py
backend/app/services/: llm_service.py  prompts.py  tokenization.py
